# common-cmake

./: .gitignore  LICENSE  README.md  common.cmake
cmake/: default_export_config.cmake  doxygen.cmake  export.cmake  groups.cmake  include.cmake  sources.cmake  targets.cmake  test.cmake  utility.cmake  version.cmake
examples/basic_header_library/: CMakeLists.txt
examples/basic_header_library/src/BHL/: CMakeLists.txt  aligned.h  guard.h
examples/basic_header_library/src/BHL_Common/: CMakeLists.txt  version.h.in
examples/executable/: CMakeLists.txt
examples/executable/src/EXE/: CMakeLists.txt  main.cpp
examples/static_library/: CMakeLists.txt
examples/static_library/src/SLIB/: CMakeLists.txt  header.h  source.cpp
examples/static_library/src/SLIB_Common/: CMakeLists.txt  version.h.in
